@@ -206,6 +206,16 @@ name you can get from your email program or your local system administrator.
 This option specifies a filename which logs all login/logout activities and
 successful user connections for logbooks with user level access.<p>
 
+<LI><b><code>Logging level = 1 | 2 | 3</code></b>
+<br>
+Specifies the logging level:<p>
+<ul>
+<li><b>1:</b> Log only login and logouts
+<li><b>2:</b> Log also write accesses
+<li><b>3:</b> Log also read accesses
+</ul>
+<p>
+
 <LI><b><code>URL = &lt;http[s]://host.domain[:port]/[subdir/]&gt;</code></b>
 <br>
 If one of the three cases is true:<P>
