@@ -47,8 +47,8 @@ starting at the items with the most votes. You can vote for a feature, or sugges
 <tr><td>Edit existing messages with elog utility<td>1</tr>
 <tr><td>Implement multi-line attributes<td>1</tr>
 <tr><td>Add more detailed user logging, like $user $date $logbook $ID read/edit/new/delete<td>1</tr>
-<tr><td>More elaborate attribute formatting, see <a href="http://midas.psi.ch/elogdemo/Forum/346">here</a><td>1</tr>
 <tr><td>Derive attribute options from list of entries of another logbook<td>1</tr>
+<tr><td>Separate administrators for different logbooks should only see their section in elogd.cfg<td>2</tr>
 
 </table></center><p>
 
